syntax = "proto3";

option java_package = "com.auth.grpc";
option java_multiple_files = true;
option go_package = "core/grpc";

package auth;

import "google/protobuf/timestamp.proto";

message LoginRequest {
  string user_name = 1;
  string password = 2;
}

message LoginReply {
  google.protobuf.Timestamp valid_upto = 1;
  string token = 2;
}

message RegisterRequest {
  string name = 1;
  string user_name = 2;
  string password = 3;
  optional string email = 4;
}

message RegisterReply {
  bool success = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginReply);
  rpc Register(RegisterRequest) returns (RegisterReply);
}
